--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">Testes</string>
+    <string name="app_name">Rhythm Game</string>
+    <string name="start_play_text">TAP TO START</string>
+    <string name="display_high_score">max combo: %d</string>
+    <string name="music_1">kimigayo</string>
+    <string name="pause_dialog_title">[Pause]</string>
+    <string name="pause_dialog_message">Do you want to quit this play?</string>
+    <string name="pause_dialog_continue">Continue</string>
+    <string name="pause_dialog_quit">Quit</string>
+    <string name="dead_dialog_ok">OK</string>
+    <string name="dead_dialog_title">GAME OVER</string>
+    <string name="dead_dialog_message">Back to Home</string>
 </resources>
